--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.0.1",
   "description": "Converts images into html code",
   "bin": {
-    "image2html": "lib/image2html.mjs"
+    "image2html": "image2html.mjs"
   },
-  "main": "lib/image2html.mjs",
+  "main": "lib/image2html.js",
+  "engines" : { "node" : ">=13.6.0" },
   "scripts": {
-    "test": "npm run test"
+    "es5": "",
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -18,7 +20,11 @@
     "html",
     "png",
     "jpg",
-    "convert"
+    "gif",
+    "convert",
+    "react",
+    "jsx",
+    "svg"
   ],
   "author": "Dariusz Arciszewski",
   "license": "MIT",
@@ -27,14 +33,13 @@
   },
   "homepage": "https://github.com/Dorious/image2html#readme",
   "dependencies": {
-    "colors": "^1.3.3",
-    "commander": "^2.19.0",
-    "get-pixels": "^3.3.2",
-    "image-type": "^4.0.0",
-    "read-chunk": "^3.1.0"
+    "colors": "^1.4.0",
+    "commander": "^4.1.0",
+    "get-pixels": "^3.3.2"
   },
   "devDependencies": {
-    "eslint": "^5.15.3",
-    "eslint-config-google": "^0.12.0"
+    "eslint": "^6.8.0",
+    "eslint-config-google": "^0.14.0",
+    "mocha": "^7.0.0"
   }
 }
